add: delete, move

--- a/src/scss/components/_card-todo.scss
+++ b/src/scss/components/_card-todo.scss
@@ -11,3 +11,8 @@
     border: 1px solid rgb(16, 119, 13);
 }
 
+.col-warning{
+    background-color: rgba(179, 53, 18, 0.2);
+    border: 1px solid rgb(179, 53, 18);
+}
+
