--- a/src/scss/components/_model-window.scss
+++ b/src/scss/components/_model-window.scss
@@ -1,11 +1,11 @@
-.show{
+.show {
     display: block;
 }
 
-.hidden{
+.hidden {
     display: none;
-    
-}.modal {
+}
+.modal {
     position: fixed;
     z-index: 1;
     left: 0;
@@ -27,4 +27,21 @@
     border: 1px solid rgb(16, 119, 13);
 }
 
+.warning-modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
 
+.warning-modal-content {
+    margin: 15% auto;
+    width: 300px;
+    padding: 2rem;
+    border-radius: 18px;
+    background-color: rgba(16, 119, 13, 0.6);
+    border: 1px solid rgb(16, 119, 13);
+}
