--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -63,6 +63,25 @@ body {
   border: 1px solid rgb(16, 119, 13);
 }
 
+.warning-modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.warning-modal-content {
+  margin: 15% auto;
+  width: 300px;
+  padding: 2rem;
+  border-radius: 18px;
+  background-color: rgba(16, 119, 13, 0.6);
+  border: 1px solid rgb(16, 119, 13);
+}
+
 .card-todo {
   display: flex;
   justify-content: space-between;
@@ -75,6 +94,11 @@ body {
 .col-todo {
   background-color: rgba(16, 119, 13, 0.2);
   border: 1px solid rgb(16, 119, 13);
+}
+
+.col-warning {
+  background-color: rgba(179, 53, 18, 0.2);
+  border: 1px solid rgb(179, 53, 18);
 }
 
 .header__wrap {
