--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,3 +12,33 @@
 @import "layout/header";
 @import "layout/main";
 @import "layout/column";
+
+
+///
+
+.fill {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    top: 5px;
+    left: 5px;
+    cursor: pointer;
+}
+
+.hold {
+    border: solid 5px #ccc;
+}
+
+.empty {
+    display: inline-block;
+    height: 160px;
+    width: 160px;
+    margin: 10px;
+    border: solid 3px salmon;
+    background: white;
+}
+
+.hovered {
+    background: #f4f4f4;
+    border-style: dashed;
+}
