--- a/src/scss/components/_model-window.scss
+++ b/src/scss/components/_model-window.scss
@@ -5,6 +5,7 @@
 .hidden {
     display: none;
 }
+
 .modal {
     position: fixed;
     z-index: 1;
@@ -13,18 +14,16 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    //background-color: rgb(0, 0, 0);
-    //background-color: rgba(0, 0, 0, 0.3);
+    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .modal-content {
-    //background-color: #fefefe;
     margin: 15% auto;
-    width: 600px;
-    padding: 2rem;
-    border-radius: 12px;
-    background-color: rgba(16, 119, 13, 0.6);
-    border: 1px solid rgb(16, 119, 13);
+    width: 500px;
+    padding: 16px;
+    border-radius: 5px;
+    background-color: #ebecf0;
 }
 
 .warning-modal {
@@ -35,13 +34,26 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .warning-modal-content {
     margin: 15% auto;
-    width: 300px;
-    padding: 2rem;
-    border-radius: 12px;
-    background-color: rgba(16, 119, 13, 0.6);
-    border: 1px solid rgb(16, 119, 13);
+    width: 360px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #ebecf0;
+}
+
+.warning-title{
+    margin-bottom: 20px;
+}
+
+.warning-test{
+    margin-bottom: 20px;
+}
+
+.warning-buttons{
+    text-align: center;
 }
