--- a/src/scss/components/_time.scss
+++ b/src/scss/components/_time.scss
@@ -1,5 +1,12 @@
 .time {
-    padding: 15px 30px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 30px;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.08em;
+    color: #ffffff;
+    padding: 16px 32px;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    border: 1px solid #ffffff;
 }
