--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,10 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700;900&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
 
 //base
 @import "base/base";
 
 //components
+@import "components/drag-n-drop";
 @import "components/time";
+@import "components/button";
+@import "components/input";
+@import "components/customselect";
 @import "components/model-window";
 @import "components/card-todo";
 
@@ -12,33 +17,3 @@
 @import "layout/header";
 @import "layout/main";
 @import "layout/column";
-
-
-///
-
-.fill {
-    position: relative;
-    height: 150px;
-    width: 150px;
-    top: 5px;
-    left: 5px;
-    cursor: pointer;
-}
-
-.hold {
-    border: solid 5px #ccc;
-}
-
-.empty {
-    display: inline-block;
-    height: 160px;
-    width: 160px;
-    margin: 10px;
-    border: solid 3px salmon;
-    background: white;
-}
-
-.hovered {
-    background: #f4f4f4;
-    border-style: dashed;
-}
