--- a/src/scss/layout/_column.scss
+++ b/src/scss/layout/_column.scss
@@ -1,6 +1,7 @@
-.column{
+.column {
     display: flex;
     flex-direction: column;
-    background-color: rgb(248, 248, 248);
-    border-radius: 18px;
+    background-color: #ebecf0;
+    border-radius: 5px;
+    padding-bottom: 10px;
 }
