--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,3 +1,19 @@
+.button {
+    margin: 0 10px;
+    border-radius: 5px;
+    border: none;
+    padding: 1.2rem;
+    font-size: 1.8rem;
+    background-color: $color-button;
+    color: $color-white;
+    cursor: pointer;
+    @extend %transition;
+    
+    &:hover {
+        background-color: $color-button-hover;
+    }
+}
+
 .btn {
     font-family: "Inter";
     font-style: normal;
@@ -8,43 +24,30 @@
     padding: 8px 12px;
     width: 100px;
     height: 40px;
-    background: #0079bf;
-    border: 4px solid #0079bf;
+    background: $color-button;
+    border: 4px solid $color-button;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .btn-border {
-    border: 1.5px solid #0079bf;
-    background-color: #fff;
-    color: #0079bf;
+    border: 1.5px solid $color-button;
+    background-color: $color-white;
+    color: $color-button;
+    @extend %transition;
 
     &:hover {
-        background-color: #f4f5f7;
+        background-color: $color-border-hover;
     }
 }
 
 .btn-fill {
-    border: 1.5px solid #0079bf;
-    background-color: #0079bf;
-    color: #fff;
+    border: 1.5px solid $color-button;
+    background-color: $color-button;
+    color: $color-white;
+    @extend %transition;
     
     &:hover {
-        background-color: #026aa7;
+        background-color: $color-button-hover;
     }
-}
-
-.btn-icon {
-    font-size: 18px;
-    color: #a0a4ac;
-    margin-left: 20px;
-    cursor: pointer;
-
-    &:hover {
-        color: #4c4c4c;
-    }
-}
-
-.back {
-    transform: scale(-1, 1);
 }
