--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -12,7 +12,7 @@ textarea,
 select {
     resize: none;
     border: none;
-    
+
     &:active,
     &:hover,
     &:focus {
@@ -36,6 +36,17 @@ body {
     width: 1200px;
     padding: 0 15px;
     margin: auto;
+
+    @include media-tablet {
+        width: 100%;
+    }
+}
+
+.scroll {
+    @include media-tablet {
+        height: calc(100vh - 70.8px);
+        overflow-x: scroll;
+    }
 }
 
 .wrap {
