--- a/src/scss/components/_drag-n-drop.scss
+++ b/src/scss/components/_drag-n-drop.scss
@@ -3,7 +3,7 @@
     margin: 10px;
     padding: 1rem;
     border-radius: 5px;
-    border-bottom: 1px solid #e2e4ea;
+    border-bottom: 1px solid $color-bg-drag-n-drop;
 
     &::after {
         content: "";
@@ -12,8 +12,8 @@
         position: absolute;
         top: 0;
         right: 0;
-        background-color: #e2e4ea;
-        border-bottom: 1px solid #e2e4ea;
+        background-color: $color-bg-drag-n-drop;
+        border-bottom: 1px solid $color-bg-drag-n-drop;
         border-radius: 5px;
         z-index: 100;
     }
