--- a/src/scss/components/_model-window.scss
+++ b/src/scss/components/_model-window.scss
@@ -14,8 +14,8 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: #000000;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: $color-dark;
+    background-color: $color-background-model;
 }
 
 .modal-content {
@@ -23,7 +23,7 @@
     width: 500px;
     padding: 16px;
     border-radius: 5px;
-    background-color: #ebecf0;
+    background-color: $color-primary;
 }
 
 .warning-modal {
@@ -34,8 +34,8 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: #000000;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: $color-dark;
+    background-color: $color-background-model;
 }
 
 .warning-modal-content {
@@ -43,17 +43,17 @@
     width: 360px;
     padding: 20px;
     border-radius: 5px;
-    background-color: #ebecf0;
+    background-color: $color-primary;
 }
 
-.warning-title{
+.warning-title {
     margin-bottom: 20px;
 }
 
-.warning-test{
+.warning-text {
     margin-bottom: 20px;
 }
 
-.warning-buttons{
+.warning-buttons {
     text-align: center;
 }
