--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,6 +1,10 @@
 .header {
-    background: #5443ac;
+    background: $color-primary-bg;
     padding: 1rem;
+
+    @include media-tablet {
+        width: 100%; 
+    }
 }
 
 .logo {
@@ -10,5 +14,5 @@
     font-size: 24px;
     letter-spacing: 0.01em;
     line-height: 50px;
-    color: #ffffff;
+    color: $color-white;
 }
