--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -26,6 +26,7 @@ $color-text-dark:#1f2024;
 $color-text-light: #494a50;
 
 //@media
+$tablet-big-width: 820px;
 $tablet-width: 768px;
 $mobile-big-width: 415px;
 $mobile-small-width: 320px;
