--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,7 +2,7 @@
     background: $color-primary-bg;
     padding: 1rem;
 
-    @include media-tablet {
+    @include media-big-tablet {
         width: 100%; 
     }
 }
