--- a/src/scss/components/_model-window.scss
+++ b/src/scss/components/_model-window.scss
@@ -24,6 +24,10 @@
     padding: 16px;
     border-radius: 5px;
     background-color: $color-primary;
+
+    @include media-mobile {
+        width: 100%;
+    }
 }
 
 .warning-modal {
@@ -44,6 +48,10 @@
     padding: 20px;
     border-radius: 5px;
     background-color: $color-primary;
+
+    @include media-mobile {
+        width: 95%;
+    }
 }
 
 .warning-title {
